--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -203,8 +203,8 @@
       &:before
         position: absolute
         font-family: Fontawesome
-        content: "\f041"
-        left: -35px
+        content: "\f3c5"
+        left: -39px
         top: -5px
         +x-rem(font-size, 2.3)
 
@@ -213,8 +213,8 @@
 
       &:before
         position: absolute
-        font-family: Fontawesome
-        content: "\f003"
+        font-family: Fontawesome-Regular
+        content: "\f0e0"
         left: -40px
         top: -6px
         +x-rem(font-size, 1.8)
