--- a/web/themes/hsk_zymphonies/sass/_node.sass
+++ b/web/themes/hsk_zymphonies/sass/_node.sass
@@ -333,6 +333,14 @@ div#sliding-popup
     +x-rem(font-size, 0.75)
     color: #777
 
+.cbreplay
+  #westNorth0
+    min-height: 480px
+  .nota-container
+    font-size: 14px
+    .nota-game
+      padding-left: 15px
+
 
 
 /*------------------------------------------- */
@@ -497,6 +505,16 @@ figure
       .col-md-9
         float: none
         width: 100%
+
+  .cbreplay
+    #westNorth0
+      min-height: 480px
+    .nota-container
+      font-size: 14px
+      .nota-game
+        padding-left: 15px
+
+
 
 
 
