--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2655,6 +2655,16 @@ div#sliding-popup .eu-cookie-compliance-banner #popup-buttons button:hover {
 
 .field--name-field-pgn-txt-pgn .cbreplay {
   margin-bottom: 13px;
+  max-width: 100%;
+}
+.field--name-field-pgn-txt-pgn .cbreplay #westNorth0 {
+  min-height: 480px;
+}
+.field--name-field-pgn-txt-pgn .cbreplay .nota-container {
+  font-size: 14px;
+}
+.field--name-field-pgn-txt-pgn .cbreplay .nota-container .nota-game {
+  padding-left: 15px;
 }
 .field--name-field-pgn-txt-pgn .description {
   display: block;
@@ -2662,16 +2672,6 @@ div#sliding-popup .eu-cookie-compliance-banner #popup-buttons button:hover {
   font-size: 11.625px;
   font-size: 0.75rem;
   color: #777;
-}
-
-.cbreplay #westNorth0 {
-  min-height: 480px;
-}
-.cbreplay .nota-container {
-  font-size: 14px;
-}
-.cbreplay .nota-container .nota-game {
-  padding-left: 15px;
 }
 
 /*------------------------------------------- */
