--- a/web/themes/hsk_zymphonies/sass/_node.sass
+++ b/web/themes/hsk_zymphonies/sass/_node.sass
@@ -327,19 +327,20 @@ div#sliding-popup
 .field--name-field-pgn-txt-pgn
   .cbreplay
     margin-bottom: 13px
+    max-width: 100%
+    #westNorth0
+      min-height: 480px
+    .nota-container
+      font-size: 14px
+      .nota-game
+        padding-left: 15px
   .description
     display: block
     margin-bottom: 25px
     +x-rem(font-size, 0.75)
     color: #777
 
-.cbreplay
-  #westNorth0
-    min-height: 480px
-  .nota-container
-    font-size: 14px
-    .nota-game
-      padding-left: 15px
+
 
 
 
