Einbindung der CSS-Files in den Import-Prozess

--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i);
+@import "../fonts/roboto/roboto.css";
+@import "../fonts/roboto-slab/roboto-slab.css";
+@import "../fonts/open-sans/open-sans.css";
 .container {
   padding-right: 15px;
   padding-left: 15px;
