--- a/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
@@ -1,9 +1,11 @@
 // Font-Face
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700)
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500)
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i)
+//@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700)
+//@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500)
+//@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i)
 
-
+@import "../fonts/roboto/roboto.css"
+@import "../fonts/roboto-slab/roboto-slab.css"
+@import "../fonts/open-sans/open-sans.css"
 
 
 @font-face
