Pfade zu Fonts korrigieren, Weight für Standard-Font setzen.

--- a/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
@@ -1,8 +1,3 @@
-// Font-Face
-//@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700)
-//@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500)
-//@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i)
-
 @import "../fonts/roboto/roboto.css"
 @import "../fonts/roboto-slab/roboto-slab.css"
 @import "../fonts/open-sans/open-sans.css"
@@ -61,6 +56,7 @@ $bold: 700
   line-height: 1.5
   color: $base-text-color
   font-family: $open-sans
+  font-weight: $normal
   /*- Desktop narrow -*/
   +breakpoint($breakpoint-desktop-narrow)
     @include x-rem(font-size, 0.9)
