--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -939,6 +939,7 @@ body {
   line-height: 1.5;
   color: #333;
   font-family: "Open Sans", sans-serif;
+  font-weight: 400;
   /*- Desktop narrow -*/
 }
 @media only screen and (min-width: 991px) {
@@ -3253,6 +3254,7 @@ nav#block-useraccountmenu ul li a {
   line-height: 1.5;
   color: #333;
   font-family: "Open Sans", sans-serif;
+  font-weight: 400;
   /*- Desktop narrow -*/
   font-size: 13.95px;
   font-size: 0.9rem;
@@ -3280,6 +3282,7 @@ nav#block-hsk-footer ul li a {
   line-height: 1.5;
   color: #333;
   font-family: "Open Sans", sans-serif;
+  font-weight: 400;
   /*- Desktop narrow -*/
   font-size: 13.95px;
   font-size: 0.9rem;
