--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -25,6 +25,9 @@
       a
         +small-grey-links
         padding-right: 30px
+    a.more-link
+      +small-grey-links
+      padding-right: 30px
 
     .view-header
       margin-bottom: 20px
@@ -97,6 +100,9 @@
       a
         +small-grey-links
         padding-right: 30px
+    a.more-link
+      +small-grey-links
+      padding-right: 30px
 
     .views-row
       &.default-image
