--- a/web/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -3,6 +3,13 @@
 $orange-flaeche: #ED8600
 $orange-text: #E27500
 
+
+$ci-text: #c41717
+$ci-flaeche: #AB3131
+
+$orange-text: $ci-text
+$orange-flaeche: $ci-flaeche
+
 $light-grey-text: #888
 $grey-text: #666
 $black: black
@@ -11,7 +18,7 @@ $grey-background: #888
 $divider-line-color: #e5e5e5
 $divider-line-darker-color: #ccc
 
-$link-color: $orange-text
+$link-color: $ci-text
 $base-text-color: #333
 
 $primary-color: $orange-flaeche
