--- a/web/themes/hsk_zymphonies/templates/block--system-branding-block.html.twig
+++ b/web/themes/hsk_zymphonies/templates/block--system-branding-block.html.twig
@@ -15,13 +15,13 @@
 #}
 {% set attributes = attributes.addClass('site-branding') %}
 {% block content %}
-  {#{% if site_logo %}#}
-    {#<div class="brand logo">#}
-      {#<a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="site-branding__logo">#}
-        {#<img src="{{ site_logo }}" alt="{{ 'Home'|t }}" />#}
-      {#</a>#}
-    {#</div>#}
-  {#{% endif %}#}
+  {% if site_logo %}
+    <div class="brand logo">
+      <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="site-branding__logo">
+        <img src="{{ base_path ~ directory }}/images/logo-schachklub-hannover.svg" alt="{{ 'Home'|t }}" />
+      </a>
+    </div>
+  {% endif %}
   {% if site_name or site_slogan %}
     <div class="brand site-name">
       {% if site_name %}
