Lila/Blauton an schachfelder aus Logo anpassen.

--- a/web/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -4,7 +4,7 @@ $orange-flaeche: #ED8600
 $orange-text: #E27500
 
 
-$ci-text: #c41717
+$ci-text: #d11414
 $ci-flaeche: #AB3131
 
 $orange-text: $ci-text
@@ -14,6 +14,7 @@ $light-grey-text: #888
 $grey-text: #666
 $black: black
 $blue: #6A7BA8
+$blue: #6f809b
 $grey-background: #888
 $divider-line-color: #e5e5e5
 $divider-line-darker-color: #ccc
