--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -979,11 +979,11 @@ h2 {
 }
 
 a {
-  color: #c41717;
+  color: #d11414;
   text-decoration: none;
 }
 a:hover {
-  color: #c41717;
+  color: #d11414;
   text-decoration: underline;
 }
 
@@ -1081,7 +1081,7 @@ table th, table td {
   font-size: 1rem;
 }
 table th {
-  background: #6A7BA8;
+  background: #6f809b;
   color: white;
 }
 
@@ -1367,7 +1367,7 @@ input, button, select, textarea {
   border-bottom: 1px solid #ccc;
 }
 .sidebar ul.menu li.active > a {
-  color: #c41717;
+  color: #d11414;
   background: none;
 }
 .sidebar ul.menu li a {
@@ -1378,12 +1378,12 @@ input, button, select, textarea {
 }
 .sidebar ul.menu li a:hover {
   text-decoration: none;
-  color: #c41717;
+  color: #d11414;
   background: none;
   border: none;
 }
 .sidebar ul.menu li a.is-active {
-  color: #c41717;
+  color: #d11414;
 }
 .sidebar ul.menu li ul {
   display: block;
@@ -2321,7 +2321,7 @@ form.webform-submission-kontakt-add-form input.form-text, form.webform-submissio
   text-decoration: none;
 }
 .page-node-type-article article.node--type-article footer.comment-submitted a.post-comment:hover:before {
-  color: #c41717;
+  color: #d11414;
 }
 .page-node-type-article article.node--type-article.default-image .field--name-field-image {
   display: none;
@@ -2415,11 +2415,11 @@ form.webform-submission-kontakt-add-form input.form-text, form.webform-submissio
   color: #6f6f6f;
 }
 .page-node-type-page .node-turniere .content-box.blitz i:before {
-  background: #6A7BA8;
+  background: #6f809b;
   content: "";
 }
 .page-node-type-page .node-turniere .content-box.blitz h3, .page-node-type-page .node-turniere .content-box.blitz h3 a {
-  color: #52628d;
+  color: #58677f;
 }
 .page-node-type-page .node-turniere .content-box.schnellschach i:before {
   content: "";
@@ -2429,12 +2429,12 @@ form.webform-submission-kontakt-add-form input.form-text, form.webform-submissio
 }
 .page-node-type-page .node-turniere .content-box.tusi i:before {
   content: "";
-  background: #6A7BA8;
+  background: #6f809b;
   font-size: 54.25px;
   font-size: 3.5rem;
 }
 .page-node-type-page .node-turniere .content-box.tusi h3, .page-node-type-page .node-turniere .content-box.tusi h3 a {
-  color: #52628d;
+  color: #58677f;
 }
 .page-node-type-page .node-turniere .content-box.thema i:before {
   content: "";
@@ -2630,7 +2630,7 @@ div#sliding-popup {
   background: transparent;
 }
 div#sliding-popup .eu-cookie-compliance-banner {
-  background: #6A7BA8;
+  background: #6f809b;
   padding-top: 0.5em;
 }
 div#sliding-popup .eu-cookie-compliance-banner p {
@@ -2904,7 +2904,7 @@ div#sliding-popup .eu-cookie-compliance-banner #popup-buttons button:hover {
   color: white;
 }
 .node-monatsblitz #page-title h1:before {
-  background: #6A7BA8;
+  background: #6f809b;
   content: "";
 }
 
