--- a/web/themes/hsk_zymphonies/sass/_header.sass
+++ b/web/themes/hsk_zymphonies/sass/_header.sass
@@ -371,7 +371,8 @@ nav#block-hsk-footer
             background: $primary-color
             min-width: 210px!important
             border: none
-            top: 27px!important
+            top: 35px!important
+            left: 1px!important
             padding: 8px 0
             +border-radius(0 4px 4px 4px)
             z-index: 7
