--- a/web/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -14,7 +14,7 @@ $light-grey-text: #888
 $grey-text: #666
 $black: black
 $blue: #6A7BA8
-$blue: #6f809b
+$blue: #6e7b99
 $grey-background: #888
 $divider-line-color: #e5e5e5
 $divider-line-darker-color: #ccc
