--- a/web/themes/hsk_zymphonies/sass/_views.sass
+++ b/web/themes/hsk_zymphonies/sass/_views.sass
@@ -34,7 +34,7 @@
           color: white
           line-height: 1.35
           .inner-container
-            padding: 0 15px 10px
+            padding: 0 15px 10px 30px
             p
               margin: 0 0 5px
               padding: 0
