--- a/web/themes/hsk_zymphonies/sass/_header.sass
+++ b/web/themes/hsk_zymphonies/sass/_header.sass
@@ -313,6 +313,8 @@ nav#block-hsk-footer
           margin-left: 10px
 
     .brand
+      &.site-name
+        text-align: left
       .site-branding__name, .site-branding__name a
         +x-rem(font-size, 1.7)
         margin-bottom: 2px
